--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.475.0",
@@ -21,7 +22,8 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.7.4"
+    "sonner": "^1.7.4",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
