--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.4",
-    "sweetalert2": "^11.17.2"
+    "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
